# source-collective

./: .env  .gitignore  README.md  next.config.js  next.tsconfig.json  package.json  prettier.config.js  tailwind.config.ts  tsconfig.json
notes/: extension.md  ytdlp.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-01-04-121354_create_users/: up.sql
src-tauri/migrations/2024-01-04-172506_create_sources/: down.sql  up.sql
src-tauri/migrations/2024-01-04-173954_create_source_media/: down.sql  up.sql
src-tauri/migrations/2024-01-04-174003_create_source_authors/: down.sql  up.sql
src-tauri/migrations/2024-01-04-174011_create_source_publisher/: down.sql  up.sql
src-tauri/migrations/2024-01-04-174027_create_tags/: down.sql  up.sql
src-tauri/migrations/2024-01-04-174034_create_source_quotes/: down.sql  up.sql
src-tauri/migrations/2024-01-04-174250_create_source_notes/: down.sql  up.sql
src-tauri/migrations/2024-01-04-174255_create_story/: down.sql  up.sql
src-tauri/src/: db.rs  lib.rs  models.rs  schema.rs
src-tauri/src/commands/: greet_commands.rs  mod.rs  source_commands.rs  user_commands.rs
src-tauri/src/models/: mod.rs  source_models.rs
src-tauri/src/services/: mod.rs  source_service.rs  users_service.rs
src/app/: layout.tsx  page.tsx
src/app/command/: page.tsx
src/app/dialog/: page.tsx
src/app/file-system/: page.tsx
src/app/invoke/: page.tsx
src/components/: Navigation.tsx  OLDNavigation.tsx
src/store/: Provider.tsx  index.ts  users.ts
src/utils/: icons.ts  navigation.ts
(+9 files in other folders)
