[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
tauri-plugin-shell = "2.0.0-alpha"
serde_json = "1.0"
tauri-plugin-dialog = "2.0.0-alpha.4"
tauri-plugin-fs = "2.0.0-alpha.4"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
diesel = { version = "2.1.0", features = ["sqlite", "chrono", "uuid"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15"
dirs = "5.0"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = "1.6.1"
serde = "1.0.194"

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.0.0-alpha"
# alternatively with Git
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
